<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/Text.Header"
        android:text="@string/task_difficulty"
        android:layout_margin="@dimen/default_padding"/>

    <TextView
        style="@style/Text.Default"
        android:id="@+id/easyDifficultySelect"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:text="@string/difficulty_easy"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_padding"/>

    <TextView
        style="@style/Text.Default"
        android:id="@+id/mediumDifficultySelect"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:text="@string/difficulty_medium"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_padding"/>

    <TextView
        style="@style/Text.Default"
        android:id="@+id/hardDifficultySelect"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:text="@string/difficulty_hard"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_padding"/>

</LinearLayout>
