<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/taskWizardControls"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/taskWizardBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/back"/>

    <Button
        android:id="@+id/taskWizardNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next"/>

    <Button
        android:id="@+id/taskWizardDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/create_task"
        android:visibility="gone"/>

</FrameLayout>